--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,9 @@
         <i class="btn ri-moon-fill text-xl" id="mode-button"></i>
       </nav>
     </nav>
-    <main class="flex flex-wrap min-h-screen pt-5 p-4 sm:p-16 w-full">
+    <main class="flex flex-wrap min-h-screen pt-5 p-4 sm:px-16 w-full">
       <nav
-        class="hidden sm:block sticky top-0 h-fit w-64 shrink-0 bg-base-100 pt-5"
+        class="hidden lg:block sticky top-0 h-fit w-64 shrink-0 bg-base-100 pt-5 text-lg"
       >
         <ul class="menu bg-base-300 rounded-box w-full">
           <li><a class="menu-option" href="#about">About</a></li>
@@ -59,13 +59,13 @@
                     <summary>Properties</summary>
                     <ul>
                       <li class="ml-5">
-                        <a href="#get-multiple-properties" class="menu-option"
-                          >GET - Multiple Properties</a
+                        <a href="#get-properties" class="menu-option"
+                          >GET - Properties</a
                         >
                       </li>
                       <li class="ml-5">
-                        <a href="#get-single-property" class="menu-option"
-                          >GET - Single Property</a
+                        <a href="#get-property" class="menu-option"
+                          >GET - Property</a
                         >
                       </li>
                     </ul>
@@ -113,10 +113,14 @@
                     <summary>Favourites</summary>
                     <ul>
                       <li class="ml-5">
-                        <a class="menu-option">POST - Favourite</a>
+                        <a href="#post-favourite" class="menu-option"
+                          >POST - Favourite</a
+                        >
                       </li>
                       <li class="ml-5">
-                        <a class="menu-option">DELETE - Favourite</a>
+                        <a href="#delete-favourite" class="menu-option"
+                          >DELETE - Favourite</a
+                        >
                       </li>
                     </ul>
                   </details>
@@ -176,28 +180,125 @@
             <section name="Properties" class="px-7">
               <h2 class="text-2xl font-semibold mb-2">Properties</h2>
               <hr />
-              <h3
-                id="get-multiple-properties"
-                class="text-xl font-semibold mt-8 mb-2"
-              >
-                <span class="bg-blue-400 rounded-lg p-1">GET</span> - Multiple
-                Properties
-              </h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
-                imperdiet fermentum eros, vitae feugiat urna.
-              </p>
-              <h3
-                id="get-single-property"
-                class="text-xl font-semibold mt-8 mb-2"
-              >
-                <span class="bg-blue-400 rounded-lg p-1">GET</span> - Single
-                Property
-              </h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
-                imperdiet fermentum eros, vitae feugiat urna.
-              </p>
+              <div name="GET - Properties">
+                <h3 id="get-properties" class="text-xl font-semibold mt-8 mb-2">
+                  <span class="bg-blue-400 rounded-lg p-1">GET</span> -
+                  Properties
+                </h3>
+                <h4 class="text-lg mb-2 w-full break-all">
+                  https://airbnc-backend/api/properties<span
+                    class="text-blue-400"
+                    >{?=optionalQueries}</span
+                  >
+                </h4>
+                <p class="mb-2">
+                  Returns all details for filtered properties. Can be filtered
+                  using any combination of the optional queries listed below.
+                  Default sorting is
+                  <em>descending by popularity</em>.
+                </p>
+                <div class="flex items-center gap-2 justify-start mb-2">
+                  <h4 class="text-lg">Optional Queries -</h4>
+                  <i class="ri-question-line text-3xl text-warning"></i>
+                </div>
+                <textarea
+                  readonly
+                  rows="9"
+                  class="font-['IBM_Plex_Mono'] mb-2 border border-blue-500 rounded-md p-2 w-full resize-none lg:overflow-hidden bg-base-100"
+                >
+?maxprice=<max cost per night>
+
+?minprice=<min cost per night>
+
+?sort=<cost_per_night | popularity>
+
+?order=<ascending | descending>
+
+?host=<id>
+</textarea
+                >
+                <div class="flex items-center gap-2 justify-start mb-2">
+                  <h4 class="text-lg">Success -</h4>
+                  <i class="ri-emotion-line text-3xl text-success"></i>
+                  <p class="text-xl font-['IBM_Plex_Mono'] text-success">200</p>
+                </div>
+                <textarea
+                  readonly
+                  rows="13"
+                  class="font-['IBM_Plex_Mono'] mb-2 border border-blue-500 rounded-md p-2 w-full resize-none lg:overflow-hidden bg-base-100"
+                >
+{
+  "properties": [
+    {
+      "property_id": <id>
+      "property_name": <name>
+      "location": <location>
+      "price_per_night": <price>
+      "host": <host name>,
+      "image": <img_url>
+    },
+    ...
+  ]
+}
+</textarea
+                >
+              </div>
+              <div name="GET - Property">
+                <h3 id="get-property" class="text-xl font-semibold mt-8 mb-2">
+                  <span class="bg-blue-400 rounded-lg p-1">GET</span> - Property
+                </h3>
+                <h4 class="text-lg mb-2 w-full break-all">
+                  https://airbnc-backend/api/properties/<span
+                    class="text-blue-400"
+                    >{propertyId}{?=optionalQuery}</span
+                  >
+                </h4>
+                <p class="mb-2">
+                  Returns all details for a single property, specified by it's
+                  <em>property id</em>. Can be passed an optional query of a
+                  <em>user id</em>. If passed this query, the returned
+                  "property" object will have an additional "favourited" key
+                  with a boolean value, indicating whether the specified user
+                  has favourited the specified property.
+                </p>
+                <div class="flex items-center gap-2 justify-start mb-2">
+                  <h4 class="text-lg">Optional Query -</h4>
+                  <i class="ri-question-line text-3xl text-warning"></i>
+                </div>
+                <textarea
+                  readonly
+                  rows="1"
+                  class="font-['IBM_Plex_Mono'] mb-2 border border-blue-500 rounded-md p-2 w-full resize-none lg:overflow-hidden bg-base-100"
+                >
+?user_id=<id></textarea
+                >
+                <div class="flex items-center gap-2 justify-start mb-2">
+                  <h4 class="text-lg">Success -</h4>
+                  <i class="ri-emotion-line text-3xl text-success"></i>
+                  <p class="text-xl font-['IBM_Plex_Mono'] text-success">200</p>
+                </div>
+                <textarea
+                  readonly
+                  rows="14"
+                  class="font-['IBM_Plex_Mono'] mb-2 border border-blue-500 rounded-md p-2 w-full resize-none lg:overflow-hidden bg-base-100"
+                >
+{
+  "property":  {
+      "property_id": <id>,
+      "property_name": <name>,
+      "location": <location>,
+      "price_per_night": <price>,
+      "description": <description>,
+      "host": <host name>,
+      "host_avatar" <image_url>,
+      "favourite_count": <count>,
+      "images": [<img_url>, ...],
+      "favourited": <boolean> // If passed query
+  }
+}
+</textarea
+                >
+              </div>
             </section>
             <section name="Reviews" class="px-7">
               <h2 class="text-2xl font-semibold mb-2">Reviews</h2>
@@ -433,7 +534,7 @@
               <h2 class="text-2xl font-semibold mb-2">Favourites</h2>
               <hr />
               <div name="POST - Favourite">
-                <h3 id="get-user" class="text-xl font-semibold mt-8 mb-2">
+                <h3 id="post-favourite" class="text-xl font-semibold mt-8 mb-2">
                   <span class="bg-blue-400 rounded-lg p-1">POST</span> -
                   Favourite
                 </h3>
@@ -479,7 +580,10 @@
                 >
               </div>
               <div name="DELETE - Favourite">
-                <h3 id="patch-user" class="text-xl font-semibold mt-8 mb-2">
+                <h3
+                  id="delete-favourite"
+                  class="text-xl font-semibold mt-8 mb-2"
+                >
                   <span class="bg-blue-400 rounded-lg p-1">DELETE</span> -
                   Favourite
                 </h3>
@@ -526,11 +630,11 @@
               intended for quick testing and exploration of available data.
             </p>
             <form
-              class="flex flex-col justify-center items-center space-y-5 my-5"
+              class="flex flex-col flex-wrap justify-center items-center space-y-5 my-5"
               id="get-tester"
             >
               <div
-                class="flex space-x-1 justify-center items-center align-center"
+                class="flex flex-wrap space-x-1 justify-center items-center align-center"
               >
                 <p class="bg-blue-400 rounded-lg p-1">GET</p>
                 <p>http://airbnc-backend/api/</p>
@@ -556,9 +660,9 @@
         </section>
       </section>
     </main>
-    <footer class="flex flex-col justify-center">
-      <hr class="mx-5" />
-      <p class="mt-2 mb-4 text-sm text-center">
+    <footer class="flex flex-col justify-center pt-5 sm:px-16 w-full">
+      <hr />
+      <p class="mt-3 mb-3 text-sm text-center mx-5">
         © 2025 Kieran O'Brien |
         <a href="https://kieranobrien.dev" class="hover:text-blue-400"
           >kieranobrien.dev</a
