--- a/public/index.html
+++ b/public/index.html
@@ -210,7 +210,7 @@
 
 ?minprice=<min cost per night>
 
-?sort=<cost_per_night | popularity>
+?sort=<price_per_night | popularity>
 
 ?order=<ascending | descending>
 
