--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,9 @@
     </nav>
     <main class="flex flex-wrap min-h-screen pt-5 p-4 sm:px-16 w-full">
       <nav
-        class="hidden lg:block sticky top-0 h-fit w-64 shrink-0 bg-base-100 pt-5 text-lg"
+        class="hidden md:block sticky top-0 h-fit w-64 shrink-0 bg-base-100 pt-5"
       >
-        <ul class="menu bg-base-300 rounded-box w-full">
+        <ul class="menu bg-base-300 rounded-box w-full text-lg">
           <li><a class="menu-option" href="#about">About</a></li>
           <li>
             <details>
@@ -657,11 +657,11 @@
             ></textarea>
           </div>
         </section>
-      </section>
-    </main>
-    <footer class="flex flex-col justify-center pt-5 sm:px-16 w-full">
-      <hr />
-      <p class="mt-3 mb-3 text-sm text-center mx-5">
+      </main>
+    </div>
+    <footer class="flex flex-col justify-center">
+      <hr class="mx-5" />
+      <p class="mt-2 mb-4 text-sm text-center">
         © 2025 Kieran O'Brien |
         <a href="https://kieranobrien.dev" class="hover:text-blue-400"
           >kieranobrien.dev</a
