--- a/public/index.html
+++ b/public/index.html
@@ -40,11 +40,11 @@
         <i class="btn ri-moon-fill text-xl" id="mode-button"></i>
       </nav>
     </nav>
-    <main class="flex flex-wrap min-h-screen pt-5 p-4 sm:px-16 w-full">
+    <main class="flex flex-wrap min-h-screen pt-5 p-4 sm:px-16 pt-8 w-full">
       <nav
-        class="hidden md:block sticky top-0 h-fit w-64 shrink-0 bg-base-100 pt-5"
+        class="hidden lg:block sticky top-0 h-fit w-64 shrink-0 bg-base-100 pt-5"
       >
-        <ul class="menu bg-base-300 rounded-box w-full text-lg">
+        <ul class="menu bg-base-300 rounded-box w-full text-md">
           <li><a class="menu-option" href="#about">About</a></li>
           <li>
             <details>
@@ -130,7 +130,7 @@
           <li><a class="menu-option" href="#try-it-out">Try It Out</a></li>
         </ul>
       </nav>
-      <section class="flex-1 flex-wrap sm:pl-5 pt-5 bg-base-100 w-full">
+      <section class="flex-1 flex-wrap lg:pl-5 pt-5 bg-base-100 w-full">
         <section id="about-section" class="bg-base-200 p-5 rounded-md mb-10">
           <h1 id="about" class="text-3xl font-bold mb-4">About</h1>
           <hr />
@@ -657,11 +657,11 @@
             ></textarea>
           </div>
         </section>
-      </main>
-    </div>
-    <footer class="flex flex-col justify-center">
-      <hr class="mx-5" />
-      <p class="mt-2 mb-4 text-sm text-center">
+      </section>
+    </main>
+    <footer class="flex flex-col justify-center pt-5 p-4 sm:px-16 pt-8 w-full">
+      <hr />
+      <p class="mt-5 mb-2 text-sm text-center">
         © 2025 Kieran O'Brien |
         <a href="https://kieranobrien.dev" class="hover:text-blue-400"
           >kieranobrien.dev</a
