Add prod URL for backend to docs, also enable CORS.

--- a/public/index.html
+++ b/public/index.html
@@ -185,7 +185,7 @@
                   Properties
                 </h3>
                 <h4 class="text-lg mb-2 w-full break-all">
-                  https://airbnc-backend/api/properties<span
+                  https://airbnc-backend.kieranobrien.dev/api/properties<span
                     class="text-blue-400"
                     >{?=optionalQueries}</span
                   >
@@ -247,7 +247,7 @@
                   <span class="bg-blue-400 rounded-lg p-1">GET</span> - Property
                 </h3>
                 <h4 class="text-lg mb-2 w-full break-all">
-                  https://airbnc-backend/api/properties/<span
+                  https://airbnc-backend.kieranobrien.dev/api/properties/<span
                     class="text-blue-400"
                     >{propertyId}{?=optionalQuery}</span
                   >
@@ -307,7 +307,7 @@
                   <span class="bg-blue-400 rounded-lg p-1">GET</span> - Reviews
                 </h3>
                 <h4 class="text-lg mb-2 w-full break-all">
-                  https://airbnc-backend/api/properties/<span
+                  https://airbnc-backend.kieranobrien.dev/api/properties/<span
                     class="text-blue-400"
                     >{propertyId}</span
                   >/reviews
@@ -348,7 +348,7 @@
                   <span class="bg-blue-400 rounded-lg p-1">POST</span> - Review
                 </h3>
                 <h4 class="text-lg mb-2 break-all">
-                  https://airbnc-backend/api/properties/<span
+                  https://airbnc-backend.kieranobrien.dev/api/properties/<span
                     class="text-blue-400"
                     >{propertyId}</span
                   >/reviews
@@ -406,7 +406,7 @@
                   Review
                 </h3>
                 <h4 class="text-lg mb-2 break-all">
-                  https://airbnc-backend/api/reviews/<span class="text-blue-400"
+                  https://airbnc-backend.kieranobrien.dev/api/reviews/<span class="text-blue-400"
                     >{reviewId}</span
                   >
                 </h4>
@@ -439,7 +439,7 @@
                   <span class="bg-blue-400 rounded-lg p-1">GET</span> - User
                 </h3>
                 <h4 class="text-lg mb-2 w-full break-all">
-                  https://airbnc-backend/api/users/<span class="text-blue-400"
+                  https://airbnc-backend.kieranobrien.dev/api/users/<span class="text-blue-400"
                     >{userId}</span
                   >
                 </h4>
@@ -477,7 +477,7 @@
                   Details
                 </h3>
                 <h4 class="text-lg mb-2 break-all">
-                  https://airbnc-backend/api/users/<span class="text-blue-400"
+                  https://airbnc-backend.kieranobrien.dev/api/users/<span class="text-blue-400"
                     >{userId}</span
                   >
                 </h4>
@@ -538,7 +538,7 @@
                   Favourite
                 </h3>
                 <h4 class="text-lg mb-2 w-full break-all">
-                  https://airbnc-backend/api/properties/<span
+                  https://airbnc-backend.kieranobrien.dev/api/properties/<span
                     class="text-blue-400"
                     >{propertyId}</span
                   >/favourite
@@ -587,7 +587,7 @@
                   Favourite
                 </h3>
                 <h4 class="text-lg mb-2 break-all">
-                  https://airbnc-backend/api/properties/<span
+                  https://airbnc-backend.kieranobrien.dev/api/properties/<span
                     class="text-blue-400"
                     >{propertyId}</span
                   >/users/<span class="text-blue-400">{userId}</span>/favourite
@@ -636,7 +636,7 @@
                 class="flex flex-wrap space-x-1 justify-center items-center align-center"
               >
                 <p class="bg-blue-400 rounded-lg p-1">GET</p>
-                <p>http://airbnc-backend/api/</p>
+                <p>https://airbnc-backend.kieranobrien.dev/api/</p>
                 <input
                   id="tester-input"
                   class="bg-base-100 w-50 border rounded-lg"
